--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "string": "cpp",
         "iostream": "cpp",
         "unordered_map": "cpp"
-    }
+    },
+    "python.pythonPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/python3"
 }
